Fixed gap property for rate distribution widget

--- a/web/js/index.scss
+++ b/web/js/index.scss
@@ -150,7 +150,7 @@
 .article-rating-widgets-area {
   display: flex;
   flex-wrap: wrap;
-  gap: 25px;
+  column-gap: 25px;
 }
 
 .w-rate-dist {
